VMWare Metrics. All metrics are included.
WARNING! High load is expected.

--- a/VMware VSphere Environment Metrics Visualization/grafana-influxdb-telegraf/telegraf.conf
+++ b/VMware VSphere Environment Metrics Visualization/grafana-influxdb-telegraf/telegraf.conf
@@ -38,11 +38,10 @@
     username = "USERNAME"
     password = "PASSWORD"
 
-  
-  
+
  max_query_objects = 20
  max_query_metrics = 20
- 
+
  timeout = "120s"
  object_discovery_interval = "300s"
 
@@ -50,63 +49,28 @@
  #n
  ## VMs
  ## Typical VM metrics (if omitted or empty, all metrics are collected)
-    vm_metric_include = [
-         "cpu.demand.average",
-       "cpu.idle.summation",
-       "cpu.latency.average",
-       "cpu.readiness.average",
-       "cpu.ready.summation",
-       "cpu.run.summation",
-       "cpu.usagemhz.average",
-       "cpu.used.summation",
-       "cpu.wait.summation",
-       "mem.active.average",
-       "mem.granted.average",
-       "mem.latency.average",
-       "mem.swapin.average",
-       "mem.swapinRate.average",
-       "mem.swapout.average",
-       "mem.swapoutRate.average",
-       "mem.usage.average",
-       "mem.vmmemctl.average",
-       ]
  # vm_metric_exclude = [] ## Nothing is excluded by default
   vm_instances = true ## true by default
  #
  ## Hosts
  ## Typical host metrics (if omitted or empty, all metrics are collected)
-    host_metric_include = [
-       "cpu.coreUtilization.average",
-       "cpu.costop.summation",
-       "cpu.demand.average",
-       "cpu.idle.summation",
-       "cpu.latency.average",
-       "cpu.readiness.average",
-       "cpu.ready.summation",
-       "cpu.swapwait.summation",
-       "cpu.usage.average",
-       "cpu.usagemhz.average",
-       "cpu.used.summation",
-       "cpu.utilization.average",
-       "sys.uptime.latest",
-  #     ]
  host_metric_exclude = [] ## Nothing excluded by default
  host_instances = true ## true by default
  #
  ## Clusters
  cluster_metric_include = [] ## if omitted or empty, all metrics are collected
  # cluster_metric_exclude = [] ## Nothing excluded by default
- # cluster_instances = false ## false by default
+ cluster_instances = true ## false by default
  #
  ## Datastores
  datastore_metric_include = [] ## if omitted or empty, all metrics are collected
  # datastore_metric_exclude = [] ## Nothing excluded by default
- # datastore_instances = false ## false by default for Datastores only
+ datastore_instances = true ## false by default for Datastores only
  #
  ## Datacenters
  datacenter_metric_include = [] ## if omitted or empty, all metrics are collected
 # datacenter_metric_exclude = [ "*" ] ## Datacenters are not collected by default.
- # datacenter_instances = false ## false by default for Datastores only
+ datacenter_instances = true ## false by default for Datastores only
  #
  ## Plugin Settings
  ## separator character to use for measurement and field names (default: "_")
