--- a/Hyper-V Environment Metrics Visualization/influxdb-telegraf/docker-compose.yml
+++ b/Hyper-V Environment Metrics Visualization/influxdb-telegraf/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 services:
 
   influxdb:
@@ -29,8 +29,19 @@ services:
     networks:
       - monitoring
 
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana-volume:/var/lib/grafana
+    networks:
+      - monitoring
+    restart: always
+
 volumes:
   influxdb-volume:
+  grafana-volume:
 
 networks:
   monitoring:
