--- a/Hyper-V Environment Metrics Visualization/windows_preparation/telegraf.conf
+++ b/Hyper-V Environment Metrics Visualization/windows_preparation/telegraf.conf
@@ -99,7 +99,7 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  urls = ["http://172.18.25.40:8086"]
+  urls = ["https://grafana.mscloud.dc16.ru:8086"]
   precision = "s"
   timeout = "5s"
 
@@ -136,7 +136,7 @@
   # tls_cert = "/etc/telegraf/cert.pem"
   # tls_key = "/etc/telegraf/key.pem"
   ## Use TLS but skip chain & host verification
-  # insecure_skip_verify = false
+  insecure_skip_verify = true
 
   ## HTTP Proxy override, if unset values the standard proxy environment
   ## variables are consulted to determine which proxy, if any, should be used.
