--- a/Hyper-V Environment Metrics Visualization/influxdb-telegraf/telegraf.conf
+++ b/Hyper-V Environment Metrics Visualization/influxdb-telegraf/telegraf.conf
@@ -60,7 +60,8 @@
   # Multiple urls can be specified but it is assumed that they are part of the same
   # cluster, this means that only ONE of the urls will be written to each interval.
   # urls = ["udp://localhost:8089"] # UDP endpoint example
-  urls = ["http://influxdb:8086"] # required
+  urls = ["https://influxdb:8086"] # required
+  insecure_skip_verify = true
   # The target database for metrics (telegraf will create it if not exists)
   database = "telegraf" # required
   # Precision of writes, valid values are "ns", "us" (or "µs"), "ms", "s", "m", "h".
