--- a/Hyper-V Environment Metrics Visualization/influxdb-telegraf/docker-compose.yml
+++ b/Hyper-V Environment Metrics Visualization/influxdb-telegraf/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     #ports:
     #  - 3000:3000
     volumes:
+      - ./grafana.ini:/etc/grafana/grafana.ini
+      - ./ldap.toml:/etc/grafana/ldap.toml
       - grafana-volume:/var/lib/grafana
     networks:
       - monitoring
