Hyper-V. Add "CPU Wait Time Per Dispatch".

--- a/Hyper-V Environment Metrics Visualization/windows_preparation/telegraf.conf
+++ b/Hyper-V Environment Metrics Visualization/windows_preparation/telegraf.conf
@@ -239,6 +239,7 @@
       "% Hypervisor Run Time",
       "% Idle Time",
       "% Total Run Time",
+      "CPU Wait Time Per Dispatch"
     ]
     
     [[inputs.win_perf_counters.object]]
