--- a/DevOps_in_Datacenter/1_Toolset/ansible/roles/common/tasks/main.yml
+++ b/DevOps_in_Datacenter/1_Toolset/ansible/roles/common/tasks/main.yml
@@ -1,5 +1,7 @@
 - name: Install Git
   import_tasks: install_git.yml
+- name: Install Python 3.8
+  import_tasks: install_python.yml
 - name: Install Ansible
   import_tasks: install_ansible.yml  
 - name: Install Docker
