Two environment for tests - staging and production

--- a/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/inventories/staging/inventory.ini
+++ b/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/inventories/staging/inventory.ini
@@ -1,8 +1,13 @@
-[load-balancer]
+[loadbalancers]
 lb-1    ansible_host=192.168.30.20 ansible_user=vagrant
 
-[app]
+[apps]
 app-backend-1  ansible_host=192.168.30.20 ansible_user=vagrant
 
 [db]
 mongodb-1  ansible_host=192.168.30.20 ansible_user=vagrant
+
+
+# specify strictly to use 3rd version
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
