A role to install MongoDB

--- a/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/roles/mongodb/tasks/main.yml
+++ b/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/roles/mongodb/tasks/main.yml
@@ -1,2 +1,7 @@
 - name: Install all necessary packages
   import_tasks: install.yml
+- name: Deploy MongoD configuration
+  template:
+    src: mongod.conf.j2
+    dest: /etc/mongod.conf
+  notify: restart mongodb
