--- a/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/roles/mongodb/tasks/debian/install_mongodb.yml
+++ b/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/roles/mongodb/tasks/debian/install_mongodb.yml
@@ -8,7 +8,7 @@
     state: present
 - name: Add MongoDB repository
   apt_repository:
-    repo: deb http://repo.mongodb.org/apt/debian buster/mongodb-org/4.2 main
+    repo: "deb http://repo.mongodb.org/apt/debian {{ansible_facts['ansible_distribution_major_version']}} main"
     state: present
     filename: mongodb
 - name: Install Community version of MongoDB via apt
