--- a/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/roles/mongodb/tasks/install.yml
+++ b/DevOps_in_Datacenter/4_Automatize_your_Ops/ansible/roles/mongodb/tasks/install.yml
@@ -3,4 +3,4 @@
   when: ansible_facts['os_family'] == 'Debian'
 - name: Start installation procedure on CentOS
   import_tasks: centos/install_mongodb.yml
-  when: ansible_facts['os_family'] == 'CentOS'
+  when: ansible_facts['os_family'] == 'RedHat'
