--- a/Kubernetes/Deployment_Probes_Resources/exec-liveness.yml
+++ b/Kubernetes/Deployment_Probes_Resources/exec-liveness.yml
@@ -17,7 +17,7 @@ spec:
         exec:
           command:
             - cat
-            - /tmp/healty
+            - /tmp/healthy
         initialDelaySeconds: 5
         periodSeconds: 5
     resources:
